Updated gitignore; added CMakePresets.jsonand vscode launch.json

--- a/.gitignore
+++ b/.gitignore
@@ -31,18 +31,8 @@
 *.out
 *.app
 
-out/
+# Build directory
+build/
 
+# Visual studio files
 .vs/
-
-# Linux Build files
-_deps/
-bin/
-CMakeFiles/
-*/CMakeFiles/
-cmake*
-*/cmake*
-*.spv
-CMakeCache.txt
-Makefile
-*/Makefile
